table overflow fix

--- a/src/components/widgets/Table/Table.scss
+++ b/src/components/widgets/Table/Table.scss
@@ -45,6 +45,7 @@
               width: calc(var(--column-width) + 10%);
               filter: opacity(0.7);
               text-transform: capitalize;
+              white-space: nowrap;
 
               &:first-child {
                 text-align: left;
@@ -176,6 +177,9 @@
                     transition: all 0.1s ease-in-out;
                     position: relative;
                     z-index: 100;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
                   }
                 }
               }
